crates/graphcal-project/tests/snapshots/error_snapshots__error_required_index_standalone.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
assertion_line: 450
expression: rendered
---
required index `Phase` must be declared `pub(bind)`
    Diagnostic severity: error
Begin snippet for required_index_standalone.gcl starting at line 1, column 1

snippet line 1: index Phase;
    label at line 1, columns 7 to 11: required item must be `pub(bind)`
snippet line 2: 
diagnostic help: required indexes, types, and dimensions form the bindable interface — add `pub(bind)` before the declaration
diagnostic code: graphcal::V002
