crates/graphcal-project/tests/snapshots/error_snapshots__error_rounding_requires_dimensionless.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
dimension mismatch: expected Dimensionless, found Length
    Diagnostic severity: error
Begin snippet for rounding_requires_dimensionless.gcl starting at line 4, column 1

snippet line 4: param len: Length = 20.0 cm;
snippet line 5: node bad: Length = floor(@len);
    label at line 5, columns 26 to 29: has dimension Length
diagnostic help: parameter `x` requires Dimensionless
diagnostic code: graphcal::D001
