crates/graphcal-project/tests/snapshots/error_snapshots__error_runtime_cycle.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
cyclic dependency involving `b`
    Diagnostic severity: error
Begin snippet for cycle.gcl starting at line 3, column 1

snippet line 3: node a: Dimensionless = @b + 1.0;
snippet line 4: node b: Dimensionless = @a + 1.0;
    label at line 4, columns 1 to 33: involved in cycle
diagnostic help: declarations cannot form dependency cycles
diagnostic code: graphcal::G001
