crates/graphcal-project/tests/snapshots/error_snapshots__error_sqrt_negative.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
invalid argument for sqrt (result is NaN)
