crates/graphcal-project/tests/snapshots/error_snapshots__error_struct_field_dim_mismatch.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
assertion_line: 137
expression: rendered
---
field `a` of `Pair`: expected dimension Length, found Mass
    Diagnostic severity: error
Begin snippet for struct_field_dim_mismatch.gcl starting at line 5, column 1

snippet line 5: 
snippet line 6: node bad: Pair = Pair(a: 1.0 kg, b: 100.0 m/s);
    label at line 6, column 23: has dimension Mass
diagnostic code: graphcal::S006
