crates/graphcal-project/tests/snapshots/error_snapshots__error_table_row_mismatch.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
assertion_line: 382
expression: rendered
---
table row has 2 value(s), but the header has 3 column(s)
    Diagnostic severity: error
Begin snippet for table_row_mismatch.gcl starting at line 6, column 1

snippet line 6:     : Departure, Correction, Insertion;
snippet line 7:     Launch: 5000.0 kg, 0.0 kg;
    label at line 7, columns 5 to 30: this row has 2 value(s)
snippet line 8: };
diagnostic code: graphcal::P004
