crates/graphcal-project/tests/snapshots/error_snapshots__error_to_int_non_integer_const.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
to_int() argument is not integer-valued (got 3.7); apply trunc(), floor(), ceil(), or round() explicitly before to_int()
    Diagnostic severity: error
Begin snippet for to_int_non_integer_const.gcl starting at line 1, column 1

snippet line 1: // Const conversion errors during checking because the value is known.
snippet line 2: const node invalid: Int = to_int(3.7);
    label at line 2, columns 27 to 37: error here
diagnostic code: graphcal::E001
