crates/graphcal-project/tests/snapshots/error_snapshots__error_to_int_non_integer_runtime.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
to_int() argument is not integer-valued (got 3.7); apply trunc(), floor(), ceil(), or round() explicitly before to_int()
