crates/graphcal-project/tests/snapshots/error_snapshots__error_unit_zero_exponent.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
`^0` exponent has no effect
    Diagnostic severity: error
Begin snippet for unit_zero_exponent.gcl starting at line 2, column 1

snippet line 2: param a: Dimensionless = 5.0;
snippet line 3: node bad: Dimensionless = @a -> m^0;
    label at line 3, column 35: exponent must be a non-zero integer
diagnostic help: a zero power erases its term; remove the term (or the exponent) instead of raising to zero
diagnostic code: graphcal::P016
